tests/rosetta/transpiler/Zig/character-codes-3.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencharacter-codes-3357775342/001/prog.zig:8:34: error: function parameter shadows declaration of 'b'
/tmp/TestMochiZigGoldencharacter-codes-3357775342/001/prog.zig:12:1: note: declared here
